Downgraded JDK17->JDK14 to get JOGL working